Fix wrong rendering at the end of line when drawing colored whitespaces

Previous code just deleted the end characters; new code puts in spaces
with current attributes at the end of the line.

Thanks to Igor Kostromin elwood.su@gmail.com for bug, research + patch

See bko for test code + more info
BUG: 330214
FIXED-IN: 2.13

(cherry picked from commit 427de88cc1020c7fb9fb2b8752fddfd4cc0be736)